# raytrace

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  RayConfig.h  RayConfig.h.in  camera.cpp  camera.hpp  main.cpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp
